--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -836,7 +836,7 @@ a {
     background-color: var(--accent-color);
   }
 
-  .account-form{
+  .account-form {
     padding-top: 50px;
     padding-bottom: 50px;
     width: 95%;
@@ -848,63 +848,232 @@ a {
     font-family: "Belanosima", sans-serif;
     text-align: center;
   }
-  .account-form input{
+  .account-form input {
     border: 1px solid #eeeeee;
     outline: none;
     border-radius: 0px;
   }
-  .account-form .form-floating label{
+  .account-form .form-floating label {
     color: grey;
   }
-  .account-form input:focus{
+  .account-form input:focus {
     outline: none;
     box-shadow: none;
     border: 1px solid var(--primary-color);
   }
-  .account-form .password-eye-btn{
+  .account-form .password-eye-btn {
     border-radius: 0px;
     outline: none;
     background-color: transparent;
     color: #4caf50;
     border: 1px solid #eeeeee;
   }
-  .account-form .password-eye-btn:focus{
+  .account-form .password-eye-btn:focus {
     background-color: var(--primary-color);
     color: var(--secondary-color);
   }
-  .account-form .submit-btn-row{
+  .account-form .submit-btn-row {
     margin-top: 30px;
   }
-  .account-form .submit-btn-row .btn{
+  .account-form .submit-btn-row .btn {
     border-radius: 0px;
     outline: none;
     border: none;
-    font-family: 'Belanosima', sans-serif;
+    font-family: "Belanosima", sans-serif;
     font-size: 1em;
     padding: 5px;
     min-width: 130px;
   }
-  .account-form .sign-in-link-row{
+  .account-form .sign-in-link-row {
     text-align: center;
   }
-  .account-form .sign-in-link-row a{
+  .account-form .sign-in-link-row a {
     text-decoration: none;
     color: var(--complementary-color);
-    font-family: 'Belanosima', sans-serif;
+    font-family: "Belanosima", sans-serif;
   }
-  .account-form .sign-in-link-row a:hover{
+  .account-form .sign-in-link-row a:hover {
     color: var(--primary-color);
   }
-  .account-form .reset-password-link{
+  .account-form .reset-password-link {
     text-decoration: none;
     color: var(--complementary-color);
-    font-family: 'Belanosima', sans-serif;
+    font-family: "Belanosima", sans-serif;
     float: right;
   }
-  .account-form .reset-password-link:hover{
-      color: var(--primary-color);
+  .account-form .reset-password-link:hover {
+    color: var(--primary-color);
+  }
+  .heading-container{
+    padding: 0px;
+    background-color: #6DB3F2;
+    position: relative;
+    height: 200px;
+  }
+  
+  .heading-container img{
+    position: relative;
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    opacity: 1;
+  }
+  .heading-container .image-overlay {
+    position: relative;
+  }
+  
+  .heading-container .image-overlay::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1;
+  }
+  .heading-container .heading-row-content{
+    position: absolute;
+    top: 20%;
+    width: 100%;
+    padding: 10px;
+    z-index: 1;
+  }
+  .heading-container .heading-page-title h5{
+    font-family: 'Roboto Slab', serif;
+    color: var(--primary-color);
+    font-size: 0.7em;
+  }
+  .heading-container .heading-page-title h1{
+    font-family: 'Belanosima', sans-serif;
+    font-size: 25px;
+  }
+  .heading-container .heading-beadcrumb nav{
+    float: left;
+    margin-top: 10px;
+    font-size: 0.8em;
+  }
+  .heading-container .heading-beadcrumb a{
+    color: #eeeeee;
+    text-decoration: none;
+    font-family: 'Belanosima', sans-serif;
+    transition: 0.5s ease;
+  }
+  .heading-container .heading-beadcrumb a:hover{
+    transition: 0.5s ease;
+    color: var(--primary-color);
+  }
+  .heading-container .heading-beadcrumb .active{
+    color: var(--primary-color);
+    font-family: 'Belanosima', sans-serif;
+  }
+  .heading-container .heading-beadcrumb .active::before{
+    color: white;
   }
 
+  .about-container{
+    padding: 50px 20px 50px 20px;
+  }
+  .about-container img{
+      object-fit: contain;
+  }
+  .about-container .about-content{
+    margin-top: 50px;
+  }
+  .about-container .about-content .about-title{
+    color: var(--primary-color);
+    font-family: 'Belanosima', sans-serif;
+    font-weight: 600;
+    font-size: 0.9em;
+  }
+  .about-container .about-content .store-name{
+    color: var(--complementary-color);
+    font-family: 'Belanosima', sans-serif;
+    font-size: 2.5em;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+  .about-container .about-content .about-para{
+    text-align: justify;
+    line-height: 25px;
+  }
+  .feature-container{
+    padding: 50px 20px 50px 20px;
+    background-color: #F7F5EB;
+  }
+  .feature-container .row{
+    margin-top: 30px;
+  }
+  .feature-container .heading {
+    color: var(--complementary-color);
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+    font-family: "Belanosima", sans-serif;
+    text-align: center;
+  }
+  .feature-container .col-12{
+    margin-top: 10px;
+  }
+  .feature-container .feature-item{
+    padding: 15px;
+    background-color: white;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+  }
+  .feature-container .feature-item .icon-item{
+    font-size: 2em;
+    margin-right: 20px;
+    font-weight: 600;
+    color: var(--primary-color);
+  }
+  .feature-container .feature-item .item-content{
+    font-size: 1.1em;
+    font-family: "Belanosima", sans-serif;
+    align-self: center;
+    width: 100%;
+  }
+  .feature-container .feature-item .item-para{
+    margin-top: 10px;
+    font-size: 1em;
+    width: 100%;
+  }
+  .about-faq{
+    padding: 50px 20px 50px 20px;
+  }
+  .about-faq .heading {
+    color: var(--complementary-color);
+    font-size: 2rem;
+    margin-bottom: 30px;
+    font-family: "Belanosima", sans-serif;
+    text-align: center;
+  }
+  .about-faq .accordion{
+    padding: 0px;
+  }
+  .about-faq .accordion .accordion-item{
+    border: 2px solid #f3f4f6; 
+  }
+  .about-faq .accordion .accordion-item button{
+    font-family: 'Belanosima', sans-serif;
+    font-size: 0.6em;
+  }
+  .about-faq .accordion .accordion-item button:focus{
+    background-color: transparent;
+    box-shadow: none;
+    border: none;
+  }
+  .about-faq .accordion .accordion-body{
+    text-align: justify;
+    font-size: 0.8em;
+  }
+  .about-faq .img-col{
+    padding-top: 20px;
+  }
+  .about-faq .img-col img{
+    width: 250px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+  }
 
 
 
@@ -944,6 +1113,7 @@ a {
     text-decoration: none;
     text-align: center;
     color: var(--secondary-color);
+    clear: both;
   }
   footer .go-to-top-row {
     background-color: #285430;
@@ -1905,7 +2075,7 @@ a {
   .latest-blog-container .view-all-blog a:hover {
     background-color: var(--accent-color);
   }
-  .account-form{
+  .account-form {
     padding-top: 50px;
     padding-bottom: 50px;
   }
@@ -1916,61 +2086,220 @@ a {
     font-family: "Belanosima", sans-serif;
     text-align: center;
   }
-  .account-form input{
+  .account-form input {
     border: 1px solid #eeeeee;
     outline: none;
     border-radius: 0px;
   }
-  .account-form .form-floating label{
+  .account-form .form-floating label {
     color: grey;
   }
-  .account-form input:focus{
+  .account-form input:focus {
     outline: none;
     box-shadow: none;
     border: 1px solid var(--primary-color);
   }
-  .account-form .password-eye-btn{
+  .account-form .password-eye-btn {
     border-radius: 0px;
     outline: none;
     background-color: transparent;
     color: #4caf50;
     border: 1px solid #eeeeee;
   }
-  .account-form .password-eye-btn:focus{
+  .account-form .password-eye-btn:focus {
     background-color: var(--primary-color);
     color: var(--secondary-color);
   }
-  .account-form .submit-btn-row{
+  .account-form .submit-btn-row {
     margin-top: 30px;
   }
-  .account-form .submit-btn-row .btn{
+  .account-form .submit-btn-row .btn {
     border-radius: 0px;
     outline: none;
     border: none;
-    font-family: 'Belanosima', sans-serif;
+    font-family: "Belanosima", sans-serif;
     font-size: 1.1em;
     padding: 10px;
     min-width: 120px;
   }
-  .account-form .sign-in-link-row{
+  .account-form .sign-in-link-row {
     text-align: center;
   }
-  .account-form .sign-in-link-row a{
+  .account-form .sign-in-link-row a {
     text-decoration: none;
     color: var(--complementary-color);
-    font-family: 'Belanosima', sans-serif;
+    font-family: "Belanosima", sans-serif;
   }
-  .account-form .sign-in-link-row a:hover{
+  .account-form .sign-in-link-row a:hover {
     color: var(--primary-color);
   }
-  .account-form .reset-password-link{
+  .account-form .reset-password-link {
     text-decoration: none;
     color: var(--complementary-color);
-    font-family: 'Belanosima', sans-serif;
+    font-family: "Belanosima", sans-serif;
     float: right;
   }
-  .account-form .reset-password-link:hover{
-      color: var(--primary-color);
+  .account-form .reset-password-link:hover {
+    color: var(--primary-color);
+  }
+  .heading-container{
+    padding: 0px;
+    height: 300px;
+    background-color: #6DB3F2;
+  }
+  
+  .heading-container img{
+    position: relative;
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    opacity: 1;
+  }
+  .heading-container .image-overlay {
+    position: relative;
+  }
+  
+  .heading-container .image-overlay::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1;
+  }
+  .heading-container .heading-row-content{
+    position: absolute;
+    top: 26%;
+    width: 100%;
+    padding: 10px 150px 10px 150px;
+    z-index: 1111;
+  }
+  .heading-container .heading-page-title h5{
+    font-family: 'Roboto Slab', serif;
+    color: var(--primary-color);
+    font-size: 1em;
+  }
+  .heading-container .heading-page-title h1{
+    font-family: 'Belanosima', sans-serif;
+    font-size: 40px;
+  }
+  .heading-container .heading-beadcrumb nav{
+    float: right;
+    font-size: 1.2em;
+  }
+  .heading-container .heading-beadcrumb a{
+    color: #eeeeee;
+    text-decoration: none;
+    font-family: 'Belanosima', sans-serif;
+    transition: 0.5s ease;
+  }
+  .heading-container .heading-beadcrumb a:hover{
+    transition: 0.5s ease;
+    color: var(--primary-color);
+  }
+  .heading-container .heading-beadcrumb .active{
+    color: var(--primary-color);
+    font-family: 'Belanosima', sans-serif;
+  }
+  .heading-container .heading-beadcrumb .active::before{
+    color: white;
+  }
+  .about-container{
+    padding: 100px 150px 70px 150px;
+  }
+  .about-container img{
+      object-fit: contain;
+  }
+  .about-container .about-content{
+    margin-top: 50px;
+  }
+  .about-container .about-content .about-title{
+    color: var(--primary-color);
+    font-family: 'Belanosima', sans-serif;
+    font-weight: 600;
+    font-size: 1em;
+  }
+  .about-container .about-content .store-name{
+    color: var(--complementary-color);
+    font-family: 'Belanosima', sans-serif;
+    font-size: 50px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+  .about-container .about-content .about-para{
+    text-align: justify;
+    line-height: 28px;
+  }
+  .feature-container{
+    min-height: 400px;
+    padding: 50px 150px 50px 150px;
+    background-color: #F7F5EB;
+  }
+  .feature-container .row{
+    margin-top: 50px;
+  }
+  .feature-container .heading {
+    color: var(--complementary-color);
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+    font-family: "Belanosima", sans-serif;
+    text-align: center;
+  }
+  .feature-container .feature-item{
+    width: 90%;
+    min-height: 200px;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+  }
+  .feature-container .feature-item .icon-item{
+    font-size: 2.5em;
+    margin-right: 20px;
+    font-weight: 600;
+    color: var(--primary-color);
+  }
+  .feature-container .feature-item .item-content{
+    font-size: 1.2em;
+    font-family: "Belanosima", sans-serif;
+    align-self: center;
+    width: 100%;
+  }
+  .feature-container .feature-item .item-para{
+    margin-top: 10px;
+    font-size: 1em;
+    width: 100%;
+  }
+  .about-faq{
+    padding: 50px 150px 50px 150px;
+  }
+  .about-faq .heading {
+    color: var(--complementary-color);
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+    font-family: "Belanosima", sans-serif;
+    text-align: center;
+  }
+  .about-faq .accordion{
+    padding: 0px;
+  }
+  .about-faq .accordion .accordion-item{
+    border: 2px solid #f3f4f6;
+    padding: 10px;
+    
+  }
+  .about-faq .accordion .accordion-item button{
+    font-family: 'Belanosima', sans-serif;
+    font-size: 0.6em;
+  }
+  .about-faq .accordion .accordion-item button:focus{
+    background-color: transparent;
+    box-shadow: none;
+    border: none;
+  }
+  .about-faq .accordion .accordion-body{
+    text-align: justify;
   }
 
 
