--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -904,14 +904,14 @@ a {
   .account-form .reset-password-link:hover {
     color: var(--primary-color);
   }
-  .heading-container{
+  .heading-container {
     padding: 0px;
-    background-color: #6DB3F2;
+    background-color: #6db3f2;
     position: relative;
     height: 200px;
   }
-  
-  .heading-container img{
+
+  .heading-container img {
     position: relative;
     width: 100%;
     height: 200px;
@@ -921,7 +921,7 @@ a {
   .heading-container .image-overlay {
     position: relative;
   }
-  
+
   .heading-container .image-overlay::before {
     content: "";
     position: absolute;
@@ -932,76 +932,76 @@ a {
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 1;
   }
-  .heading-container .heading-row-content{
+  .heading-container .heading-row-content {
     position: absolute;
     top: 20%;
     width: 100%;
     padding: 10px;
     z-index: 1;
   }
-  .heading-container .heading-page-title h5{
-    font-family: 'Roboto Slab', serif;
+  .heading-container .heading-page-title h5 {
+    font-family: "Roboto Slab", serif;
     color: var(--primary-color);
     font-size: 0.7em;
   }
-  .heading-container .heading-page-title h1{
-    font-family: 'Belanosima', sans-serif;
+  .heading-container .heading-page-title h1 {
+    font-family: "Belanosima", sans-serif;
     font-size: 25px;
   }
-  .heading-container .heading-beadcrumb nav{
+  .heading-container .heading-beadcrumb nav {
     float: left;
     margin-top: 10px;
     font-size: 0.8em;
   }
-  .heading-container .heading-beadcrumb a{
+  .heading-container .heading-beadcrumb a {
     color: #eeeeee;
     text-decoration: none;
-    font-family: 'Belanosima', sans-serif;
+    font-family: "Belanosima", sans-serif;
     transition: 0.5s ease;
   }
-  .heading-container .heading-beadcrumb a:hover{
+  .heading-container .heading-beadcrumb a:hover {
     transition: 0.5s ease;
     color: var(--primary-color);
   }
-  .heading-container .heading-beadcrumb .active{
+  .heading-container .heading-beadcrumb .active {
     color: var(--primary-color);
-    font-family: 'Belanosima', sans-serif;
+    font-family: "Belanosima", sans-serif;
   }
-  .heading-container .heading-beadcrumb .active::before{
+  .heading-container .heading-beadcrumb .active::before {
     color: white;
   }
 
-  .about-container{
+  .about-container {
     padding: 50px 20px 50px 20px;
   }
-  .about-container img{
-      object-fit: contain;
+  .about-container img {
+    object-fit: contain;
   }
-  .about-container .about-content{
+  .about-container .about-content {
     margin-top: 50px;
   }
-  .about-container .about-content .about-title{
+  .about-container .about-content .about-title {
     color: var(--primary-color);
-    font-family: 'Belanosima', sans-serif;
+    font-family: "Belanosima", sans-serif;
     font-weight: 600;
     font-size: 0.9em;
   }
-  .about-container .about-content .store-name{
+  .about-container .about-content .store-name {
     color: var(--complementary-color);
-    font-family: 'Belanosima', sans-serif;
+    font-family: "Belanosima", sans-serif;
     font-size: 2.5em;
     margin-top: 15px;
     margin-bottom: 15px;
   }
-  .about-container .about-content .about-para{
+  .about-container .about-content .about-para {
     text-align: justify;
     line-height: 25px;
   }
-  .feature-container{
+  .feature-container {
     padding: 50px 20px 50px 20px;
-    background-color: #F7F5EB;
+    background-color: #f7f5eb;
   }
-  .feature-container .row{
+  .feature-container .row {
     margin-top: 30px;
   }
   .feature-container .heading {
@@ -1011,32 +1011,32 @@ a {
     font-family: "Belanosima", sans-serif;
     text-align: center;
   }
-  .feature-container .col-12{
+  .feature-container .col-12 {
     margin-top: 10px;
   }
-  .feature-container .feature-item{
+  .feature-container .feature-item {
     padding: 15px;
     background-color: white;
-    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
   }
-  .feature-container .feature-item .icon-item{
+  .feature-container .feature-item .icon-item {
     font-size: 2em;
     margin-right: 20px;
     font-weight: 600;
     color: var(--primary-color);
   }
-  .feature-container .feature-item .item-content{
+  .feature-container .feature-item .item-content {
     font-size: 1.1em;
     font-family: "Belanosima", sans-serif;
     align-self: center;
     width: 100%;
   }
-  .feature-container .feature-item .item-para{
+  .feature-container .feature-item .item-para {
     margin-top: 10px;
     font-size: 1em;
     width: 100%;
   }
-  .about-faq{
+  .about-faq {
     padding: 50px 20px 50px 20px;
   }
   .about-faq .heading {
@@ -1046,48 +1046,114 @@ a {
     font-family: "Belanosima", sans-serif;
     text-align: center;
   }
-  .about-faq .accordion{
+  .about-faq .accordion {
     padding: 0px;
   }
-  .about-faq .accordion .accordion-item{
-    border: 2px solid #f3f4f6; 
+  .about-faq .accordion .accordion-item {
+    border: 2px solid #f3f4f6;
   }
-  .about-faq .accordion .accordion-item button{
-    font-family: 'Belanosima', sans-serif;
+  .about-faq .accordion .accordion-item button {
+    font-family: "Belanosima", sans-serif;
     font-size: 0.6em;
   }
-  .about-faq .accordion .accordion-item button:focus{
+  .about-faq .accordion .accordion-item button:focus {
     background-color: transparent;
     box-shadow: none;
     border: none;
   }
-  .about-faq .accordion .accordion-body{
+  .about-faq .accordion .accordion-body {
     text-align: justify;
     font-size: 0.8em;
   }
-  .about-faq .img-col{
+  .about-faq .img-col {
     padding-top: 20px;
   }
-  .about-faq .img-col img{
+  .about-faq .img-col img {
     width: 250px;
     margin: auto;
     display: flex;
     justify-content: center;
   }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+  .contact-action-container {
+    padding: 50px 15px 50px 15px;
+    position: relative;
+  }
+  .contact-action-container .col-12{
+    margin-top: 10px;
+  }
+  .contact-action-container .contact-item {
+    border: 3px solid #f3f4f6;
+    min-height: 220px;
+    padding: 15px;
+  }
+  .contact-action-container .contact-item img {
+    width: 60px;
+    height: auto;
+    object-fit: contain;
+  }
+  .contact-action-container .contact-item .item-content {
+    padding-top: 20px;
+  }
+  .contact-action-container .item-content h4 {
+    color: var(--complementary-color);
+    font-family: "Belanosima", sans-serif;
+  }
+  .contact-action-container .item-content a {
+    text-decoration: none;
+    margin-top: 10px;
+    color: var(--complementary-color);
+  }
+  .contact-action-container .item-content a:hover {
+    color: var(--primary-color);
+  }
+  .contact-form {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .contact-form .form-col {
+    border: 2px solid #f3f4f6;
+    padding: 20px;
+  }
+  .contact-form h5 {
+    color: var(--primary-color);
+    font-family: "Belanosima", sans-serif;
+    font-size: 0.9em;
+  }
+  .contact-form h3 {
+    color: var(--complementary-color);
+    font-family: "Belanosima", sans-serif;
+    font-size: 2.1em;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+  .contact-form input,
+  .contact-form textarea {
+    border: 2px solid #f3f4f6;
+    border-radius: 0px;
+  }
+  .contact-form input:focus,
+  .contact-form textarea:focus {
+    box-shadow: none;
+    border: 1px solid var(--primary-color);
+  }
+  .contact-form label {
+    color: grey;
+  }
+  .contact-form form #submitBtn {
+    border-radius: 0px;
+    min-width: 120px;
+    font-family: "Belanosima", sans-serif;
+    padding: 5px;
+    font-size: 1em;
+    outline: none;
+    border: none;
+  }
+  .map-container iframe{
+    width: 100%;
+    padding: 0px;
+    min-height: 250px;
+  }
 
 
 
@@ -2142,13 +2208,13 @@ a {
   .account-form .reset-password-link:hover {
     color: var(--primary-color);
   }
-  .heading-container{
+  .heading-container {
     padding: 0px;
     height: 300px;
-    background-color: #6DB3F2;
+    background-color: #6db3f2;
   }
-  
-  .heading-container img{
+
+  .heading-container img {
     position: relative;
     width: 100%;
     height: 300px;
@@ -2158,7 +2224,7 @@ a {
   .heading-container .image-overlay {
     position: relative;
   }
-  
+
   .heading-container .image-overlay::before {
     content: "";
     position: absolute;
@@ -2169,75 +2235,75 @@ a {
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 1;
   }
-  .heading-container .heading-row-content{
+  .heading-container .heading-row-content {
     position: absolute;
     top: 26%;
     width: 100%;
     padding: 10px 150px 10px 150px;
     z-index: 1111;
   }
-  .heading-container .heading-page-title h5{
-    font-family: 'Roboto Slab', serif;
+  .heading-container .heading-page-title h5 {
+    font-family: "Roboto Slab", serif;
     color: var(--primary-color);
     font-size: 1em;
   }
-  .heading-container .heading-page-title h1{
-    font-family: 'Belanosima', sans-serif;
+  .heading-container .heading-page-title h1 {
+    font-family: "Belanosima", sans-serif;
     font-size: 40px;
   }
-  .heading-container .heading-beadcrumb nav{
+  .heading-container .heading-beadcrumb nav {
     float: right;
     font-size: 1.2em;
   }
-  .heading-container .heading-beadcrumb a{
+  .heading-container .heading-beadcrumb a {
     color: #eeeeee;
     text-decoration: none;
-    font-family: 'Belanosima', sans-serif;
+    font-family: "Belanosima", sans-serif;
     transition: 0.5s ease;
   }
-  .heading-container .heading-beadcrumb a:hover{
+  .heading-container .heading-beadcrumb a:hover {
     transition: 0.5s ease;
     color: var(--primary-color);
   }
-  .heading-container .heading-beadcrumb .active{
+  .heading-container .heading-beadcrumb .active {
     color: var(--primary-color);
-    font-family: 'Belanosima', sans-serif;
+    font-family: "Belanosima", sans-serif;
   }
-  .heading-container .heading-beadcrumb .active::before{
+  .heading-container .heading-beadcrumb .active::before {
     color: white;
   }
-  .about-container{
+  .about-container {
     padding: 100px 150px 70px 150px;
   }
-  .about-container img{
-      object-fit: contain;
+  .about-container img {
+    object-fit: contain;
   }
-  .about-container .about-content{
+  .about-container .about-content {
     margin-top: 50px;
   }
-  .about-container .about-content .about-title{
+  .about-container .about-content .about-title {
     color: var(--primary-color);
-    font-family: 'Belanosima', sans-serif;
+    font-family: "Belanosima", sans-serif;
     font-weight: 600;
     font-size: 1em;
   }
-  .about-container .about-content .store-name{
+  .about-container .about-content .store-name {
     color: var(--complementary-color);
-    font-family: 'Belanosima', sans-serif;
+    font-family: "Belanosima", sans-serif;
     font-size: 50px;
     margin-top: 15px;
     margin-bottom: 15px;
   }
-  .about-container .about-content .about-para{
+  .about-container .about-content .about-para {
     text-align: justify;
     line-height: 28px;
   }
-  .feature-container{
+  .feature-container {
     min-height: 400px;
     padding: 50px 150px 50px 150px;
-    background-color: #F7F5EB;
+    background-color: #f7f5eb;
   }
-  .feature-container .row{
+  .feature-container .row {
     margin-top: 50px;
   }
   .feature-container .heading {
@@ -2247,31 +2313,31 @@ a {
     font-family: "Belanosima", sans-serif;
     text-align: center;
   }
-  .feature-container .feature-item{
+  .feature-container .feature-item {
     width: 90%;
     min-height: 200px;
     padding: 20px;
     background-color: white;
-    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
   }
-  .feature-container .feature-item .icon-item{
+  .feature-container .feature-item .icon-item {
     font-size: 2.5em;
     margin-right: 20px;
     font-weight: 600;
     color: var(--primary-color);
   }
-  .feature-container .feature-item .item-content{
+  .feature-container .feature-item .item-content {
     font-size: 1.2em;
     font-family: "Belanosima", sans-serif;
     align-self: center;
     width: 100%;
   }
-  .feature-container .feature-item .item-para{
+  .feature-container .feature-item .item-para {
     margin-top: 10px;
     font-size: 1em;
     width: 100%;
   }
-  .about-faq{
+  .about-faq {
     padding: 50px 150px 50px 150px;
   }
   .about-faq .heading {
@@ -2281,26 +2347,105 @@ a {
     font-family: "Belanosima", sans-serif;
     text-align: center;
   }
-  .about-faq .accordion{
+  .about-faq .accordion {
     padding: 0px;
   }
-  .about-faq .accordion .accordion-item{
+  .about-faq .accordion .accordion-item {
     border: 2px solid #f3f4f6;
     padding: 10px;
-    
   }
-  .about-faq .accordion .accordion-item button{
-    font-family: 'Belanosima', sans-serif;
+  .about-faq .accordion .accordion-item button {
+    font-family: "Belanosima", sans-serif;
     font-size: 0.6em;
   }
-  .about-faq .accordion .accordion-item button:focus{
+  .about-faq .accordion .accordion-item button:focus {
     background-color: transparent;
     box-shadow: none;
     border: none;
   }
-  .about-faq .accordion .accordion-body{
+  .about-faq .accordion .accordion-body {
     text-align: justify;
   }
+  .contact-action-container {
+    padding: 70px 150px 70px 150px;
+    position: relative;
+  }
+  .contact-action-container .contact-item {
+    width: 90%;
+    border: 3px solid #f3f4f6;
+    min-height: 250px;
+    padding: 20px;
+  }
+  .contact-action-container .contact-item img {
+    width: 80px;
+    height: auto;
+    object-fit: contain;
+  }
+  .contact-action-container .contact-item .item-content {
+    padding-top: 20px;
+  }
+  .contact-action-container .item-content h4 {
+    color: var(--complementary-color);
+    font-family: "Belanosima", sans-serif;
+  }
+  .contact-action-container .item-content a {
+    text-decoration: none;
+    margin-top: 10px;
+    color: var(--complementary-color);
+  }
+  .contact-action-container .item-content a:hover {
+    color: var(--primary-color);
+  }
+  .contact-form {
+    padding: 50px 130px 50px 130px;
+  }
+  .contact-form .form-col {
+    border: 2px solid #f3f4f6;
+    padding: 30px;
+  }
+  .contact-form h5 {
+    color: var(--primary-color);
+    font-family: "Belanosima", sans-serif;
+    font-size: 1em;
+  }
+  .contact-form h3 {
+    color: var(--complementary-color);
+    font-family: "Belanosima", sans-serif;
+    font-size: 2.5em;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .contact-form input,
+  .contact-form textarea {
+    border: 2px solid #f3f4f6;
+    border-radius: 0px;
+  }
+  .contact-form input:focus,
+  .contact-form textarea:focus {
+    box-shadow: none;
+    border: 1px solid var(--primary-color);
+  }
+  .contact-form label {
+    color: grey;
+  }
+  .contact-form form #submitBtn {
+    border-radius: 0px;
+    min-width: 150px;
+    font-family: "Belanosima", sans-serif;
+    padding: 5px;
+    font-size: 1.2em;
+    outline: none;
+    border: none;
+  }
+  .map-container iframe{
+    width: 100%;
+    padding: 0px;
+    min-height: 500px;
+  }
+
+
+
+
 
 
 
